<resources>
    <string name="app_name">ChatApplication</string>

    <string-array name="spinner">
        <item>male</item>
        <item>female</item>
    </string-array>

    <string name="login_button">LOGIN</string>
    <string name="register_button">REGISTER</string>
    <string name="logout_button">LOGOUT</string>
    <string name="send_button">SEND</string>
    <string name="my_friend">my friend</string>
    <string name="password">password</string>
    <string name="username">username</string>
    <string name="lastname">Last Name</string>
    <string name="firstname">First Name</string>
    <string name="email_adress">email adress</string>
    <string name="message_text">message text</string>
    <string name="my_chat_list">My chat list</string>
    <string name="first_letter">N</string>
    <string name="contact_name">Petar Petrovic</string>
    <string name="savo_dragovic">Savo Dragovic</string>
    <string name="srdjan_usorac">Srdjan Usorac</string>
    <string name="marko_markovic">Marko Markovic</string>
    <string name="igor_ilic">Igor Ilic</string>
    <string name="nikola_percevic">Nikola Percevic</string>
    <string name="vladimir_spasojevic">Vladimir Spasojevic</string>
    <string name="petar_petrovic">Petar Petrovic</string>
    <string name="van_persi">Robin van Persi</string>
    <string name="diego_forlan">Diego Forlan</string>
    <string name="arien_roben">Arien Roben</string>
    <string name="oleg_blohin">Oleg Blohin</string>
    <string name="ola_solskjer">Ola Guner Solskjer</string>
    <string name="dejan_savicevic">Dejan Savicevic</string>
    <string name="message1">Hey!!!</string>
    <string name="message2">Hello how are you?</string>
    <string name="message3">I am fine thanks, whats up?</string>
    <string name="message4">Long time no see</string>
    <string name="message5">Nothiing special, will i see you tonight?</string>
    <string name="message6">Sure meet me at 8</string>
    <string name="message7">Fine, see you</string>




</resources>
