<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.savoa.chatapplication.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:inputType="text"
            android:hint="@string/username"
            android:shadowColor="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="154dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="20"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:shadowColor="@color/colorPrimaryDark"
            android:textColor="@color/colorAccent" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp">

        <Button
            android:id="@+id/login"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:text="@string/login_button"
            />

        <Button
            android:id="@+id/register"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:text="@string/register_button" />

    </LinearLayout>




</LinearLayout>
